--- a/package.json
+++ b/package.json
@@ -51,6 +51,7 @@
     "cmdk": "1.0.4",
     "date-fns": "4.1.0",
     "embla-carousel-react": "8.5.1",
+    "framer-motion": "^11.13.1",
     "geist": "^1.3.1",
     "google-maps": "4.3.3",
     "googlemaps": "1.12.0",
@@ -61,12 +62,14 @@
     "next": "15.5.4",
     "next-themes": "^0.4.6",
     "react": "19.1.0",
+    "react-countup": "^6.5.3",
     "react-day-picker": "9.8.0",
     "react-dom": "19.1.0",
     "react-hook-form": "^7.60.0",
     "react-leaflet": "5.0.0",
     "react-resizable-panels": "^2.1.7",
     "recharts": "2.15.4",
+    "seraui": "0.0.2",
     "sonner": "^1.7.4",
     "tailwind-merge": "^2.5.5",
     "tailwindcss-animate": "^1.0.7",
@@ -78,6 +81,8 @@
     "@types/node": "^22",
     "@types/react": "^18",
     "@types/react-dom": "^18",
+    "@typescript-eslint/eslint-plugin": "^8.46.3",
+    "@typescript-eslint/parser": "^8.46.3",
     "eslint": "^8.57.1",
     "eslint-config-next": "15.5.4",
     "postcss": "^8.5",
