--- a/package.json
+++ b/package.json
@@ -62,6 +62,7 @@
     "mapbox-gl": "latest",
     "next": "15.5.4",
     "next-themes": "^0.4.6",
+    "postprocessing": "^6.37.8",
     "react": "19.1.0",
     "react-countup": "^6.5.3",
     "react-day-picker": "9.8.0",
@@ -73,6 +74,7 @@
     "sonner": "^1.7.4",
     "tailwind-merge": "^2.5.5",
     "tailwindcss-animate": "^1.0.7",
+    "three": "^0.180.0",
     "vaul": "^0.9.9",
     "zod": "3.25.76"
   },
