--- a/package.json
+++ b/package.json
@@ -70,6 +70,7 @@
     "react-hook-form": "^7.60.0",
     "react-leaflet": "5.0.0",
     "react-resizable-panels": "^2.1.7",
+    "react-swipeable": "7.0.1",
     "recharts": "2.15.4",
     "sonner": "^1.7.4",
     "tailwind-merge": "^2.5.5",
