--- a/mobile/package.json
+++ b/mobile/package.json
@@ -22,6 +22,7 @@
     "@react-navigation/native-stack": "^6.11.0",
     "@supabase/supabase-js": "^2.39.0",
     "expo": "~54.0.0",
+    "expo-image-picker": "~17.0.8",
     "expo-linear-gradient": "^15.0.7",
     "expo-location": "~19.0.7",
     "expo-notifications": "~0.32.12",
@@ -40,8 +41,8 @@
   },
   "devDependencies": {
     "@babel/core": "^7.25.0",
-    "@types/react": "~18.3.0",
-    "@types/react-native": "^0.72.8",
+    "@types/react": "^19.1.0",
+    "@types/react-native": "^0.73.0",
     "typescript": "^5.3.0"
   },
   "private": true
